#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

=======
Tag: V02-00-21
2021-07-01 Mikhail Dubrovin
- app/datinfo - add printing of event_keys - need it for unknown detector name
- examples/ex_new_dets.py - add example 102 for iStar
- check that support for iStar was added earlier in
   src/DetectorTypes.py
   src/PyDataAccess.py
   src/PyDetectorAccess.py

Tag: V02-00-20
2021-06-11 Mikhail Dubrovin
- app/epix10ka_offset_calibration - change default for d_nperiods=False
- src/UtilsEpix10kaCalib.py - multiple changes
  - changed axis titles - split long name, smaller font
  - saw_edges - change algorithm (old in _v0), np.nonzero(...)[0] -> np.flatnonzero
  - fit - add protection against intensity overflow above 16000 ADU
  - offset_calibration - in accumulation of data add protection for d(fiducials) != 3 between events
  - merge_panel_gain_ranges - by Philip request use pedestals_FL for AHL-L, AML-L

Tag: V02-00-19
2021-05-19 Mikhail Dubrovin
- refactoring in UtilsEpix10kaCalib.py
- GlobalUtils.py - add info_command_line and info_kwargs
  new file:   app/datinfo
  new file:   examples/test_load_npy.py

Tag: V02-00-18
2021-04-30 Mikhail Dubrovin
- src/UtilsEpix10kaCalib.py fix issues with matplotlib move, save plots under <panel-id>/plots (Philip)

Tag: V02-00-17
2021-04-29 Daniel Damiani
- PyDataAccess.py - add support for new ddl config versions for epix10ka

Tag: V02-00-16
2021-04-27 Mikhail Dubrovin
- UtilsJungfrauCalib.py - fix loger.info for missing constants replaced by default

Tag: V02-00-15
2021-04-26 Mikhail Dubrovin
modified:
	UtilsCalib.py - logger.info -> debug
	UtilsJungfrauCalib.py - tune logging messages for production

Tag: V02-00-14
2021-04-23 Mikhail Dubrovin
modified: